tests/snapshots/hashed_iter_insert_remove__tests__insert_and_get_by_trader_name.snap
---
source: tests/hashed_iter_insert_remove.rs
expression: order_map._trader_name_index
---
{
    "Bob": {
        1,
    },
    "John": {
        0,
        2,
    },
    "Alice": {
        0,
    },
}
