tests/snapshots/hashed_iter_insert_remove__tests__remove_by_trader_name.snap
---
source: tests/hashed_iter_insert_remove.rs
expression: order_map._trader_name_index
---
{
    "Bob": {
        1,
    },
}
